cmake_minimum_required(VERSION 3.10)

if(DEFINED ENV{PS2DEV})
    include($ENV{PS2DEV}/share/ps2dev.cmake)
elseif(DEFINED ENV{PSPDEV})
    include($ENV{PSPDEV}/psp/share/pspdev.cmake)
else()
    message(FATAL_ERROR "PS2DEV or PSPDEV environment variable not defined")
endif()

project(bulletml)

# Set C++ standard if you want (optional)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Include directories
include_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/tinyxml
)


# Compiler flags (append to existing)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsingle-precision-constant -fno-exceptions")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsingle-precision-constant -fno-exceptions")

# Sources from tinyxml
set(TINYXML_SOURCES
  tinyxml/tinyxml.cpp
  tinyxml/tinyxmlparser.cpp
  tinyxml/tinyxmlerror.cpp
)

# Sources from bulletml
set(BULLETML_SOURCES
  bulletmlparser-tinyxml.cpp
  bulletmlparser.cpp
  bulletmltree.cpp
  calc.cpp
  formula-variables.cpp
  bulletmlrunner.cpp
  bulletmlrunnerimpl.cpp
)

# Add a custom command to generate calc.cpp from calc.yy using bison
find_package(BISON REQUIRED)
BISON_TARGET(calc_parser ${CMAKE_CURRENT_SOURCE_DIR}/calc.yy ${CMAKE_CURRENT_BINARY_DIR}/calc.cpp
  DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/calc.hpp
)

# Add a custom command to generate calc.cpp from calc.yy using bison
set_source_files_properties(${BISON_calc_parser_OUTPUTS} PROPERTIES GENERATED TRUE)

# Add an executable or library target
add_library(bulletml STATIC
  ${BULLETML_SOURCES}
  ${TINYXML_SOURCES}
  ${BISON_calc_parser_OUTPUTS}
)

# Installation directories
if(DEFINED ENV{PS2DEV})
    set(CMAKE_INSTALL_PREFIX "${CMAKE_TARGET_INSTALL_PREFIX}/")
else()
    set(CMAKE_INSTALL_PREFIX "$PSPDIR/")
endif()

# Find all bulletml*.h headers
file(GLOB BULLETML_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/bulletml*.h")

# Add specific headers that don’t match the pattern
set(OTHER_HEADERS
  formula.h
  tree.h
  ${CMAKE_CURRENT_BINARY_DIR}/calc.hpp  # Generated by Bison
  tinyxml/tinyxml.h
)

# Install headers to include/bulletml
install(FILES ${BULLETML_HEADERS} ${OTHER_HEADERS}
        DESTINATION include/bulletml)

# Install static library
install(TARGETS bulletml
        ARCHIVE DESTINATION lib)
